messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
  labels:
    app: django-app
    version: v2
    color: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
      version: v2
      color: green
  template:
    metadata:
      labels:
        app: django-app
        version: v2
        color: green
    spec:
      containers:
      - name: django-app
        image: linda575/django-messaging-app:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
